# optimal-risk-assessment

./: .gitignore  Nico_testoptloop_ressarch.py  README.md  aux_input.py  combine_ressarch.py  combine_ressarch_figs.py  combine_ressarch_tables.py  create_latex_detect_tables.py  detect_input.py  detect_tables.py  extract_accept_metadata.py  learnCGModelEM.py  learn_lds.py  main.py  mainREGcode_ressarch.py  make_datafiles.py  merge_params.py  modelopttest.py  modelsearch.py  newacceptconfig.py  plotregressresults.py  pyproject.toml  reg_ranges.py  regress_input.py  ressarch.py  ressarch_tables.py  run_tests.py  subid.py  testoptloop_ressarch.py  user_input.py  user_input_accept.py  user_input_ressarch.py
Cold Complaint Data CSVs/Testing/: data14.csv
Cold Complaint Data CSVs/Training/: data11.csv  data13.csv  data17.csv  data18.csv  data28.csv  (+37 more)
HWP DP Spike Scenario/: params.txt
boston_housing/: export_data.ipynb  run_regression_demo.py
detectopt/: __init__.py  detectioncall.py  leveltune.py  truthdata.py
ldslearn/: asos.py  em_converged.py  guess.py  inverse_covariance_selection.py  lds_timeseries.py  ldsparamsidx.py  learn_kalman.py
regressopt/: __init__.py  elm.py  mainREGcode_ressarch.py  modelopttest.py  modelsearch.py  preprocessing.py  reg_ranges.py
stablelds/: __init__.py  learnCGModelEM.py  learn_lds.py
subfun/: __init__.py  subid.py
tests/: test_elm.py  test_integration_regressopt.py  test_integration_testoptloop_run.py  test_mainREGcode_ressarch.py  test_modelopttest.py  test_modelsearch.py  test_plotregressresults.py  test_preprocessing.py  test_reg_ranges.py  test_testoptloop_ressarch.py
(+168 files in other folders)
