[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accept-toolbox"
description = "ACCEPT: Adverse Condition and Critical Event Prediction Toolbox"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "filterpy",
    "joblib",
    "pandas",
    "cvxpy",
    "sippy_unipi",
]

[project.optional-dependencies]
dev = ["pytest"]
qp = ["quadprog"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning",
    # joblib's numpy_pickle.py does `array.shape = ...` instead of .reshape() on
    # load; unfixed upstream bug (joblib/joblib#1772), triggers on numpy>=2.5.
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["regressopt*", "detectopt*", "ldslearn*", "stablelds*", "subfun*"]
